<resources>
    <string name="app_name">My Ecommerce</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="re_input_password">Nhập lại mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="dont_have_account">Chưa có tài khoản? Đăng ký</string>
    <string name="full_name">Họ tên</string>
    <string name="sign_up_successfully">Đăng ký thành công</string>
    <string name="error_happened">Đã có lỗi xảy ra</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="require_full_name">Họ tên trống!</string>
    <string name="require_password_8_characters">Mật khẩu ít nhất 8 ký tự</string>
    <string name="invalid_account_or_password">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="password_not_match">Mật khẩu không trùng khớp</string>
    <string name="send_email">Gửi mail</string>
    <string name="guide_reset_password">Sau khi nhấn gửi, vui lòng check email để đổi mật khẩu</string>
    <string name="send_email_successfully">Gửi email thành công, vui lòng kiểm tra email để đổi mật khẩu</string>
    <string name="send_email_failed">Gửi email thất bại, vui lòng kiểm tra kết nối mạng</string>
    <string name="no_internet_connection">Không có internet, hãy kiểm tra kết nối mạng</string>
    <string name="zero_vnd">₫0</string>
    <string name="loading">Loading…</string>

    <string name="search_view_hint">Tìm kiếm sản phẩm, shop, …</string>

    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="notification">Thông báo</string>
    <string name="chat">Tin nhắn</string>
    <string name="account">Tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="deal_of_the_day">Deal hot trong ngày</string>
    <string name="view_all">Xem tất cả</string>

    <!--    rating-->
    <string name="rating">Đánh giá</string>
    <string name="your_rating">Đánh giá của bạn</string>

    <!--    cart-->
    <string name="buy_now">Mua ngay</string>
    <string name="buy">Mua hàng</string>
    <string name="sum_billing">Tổng thanh toán</string>
    <string name="all">Tất cả</string>
    <string name="add_voucher_of_shop">Thêm mã giảm giá của shop</string>
    <string name="my_cart">Giỏ hàng của tôi</string>
    <string name="bought">Đã mua</string>
    <string name="add_cart_item_successfully">Đã thêm vào giỏ hàng</string>
    <string name="add_cart_item_failed">Thêm vào giỏ hàng thất bại</string>
    <string name="delete_cart_item_successfully">Đã xoá khỏi giỏ hàng</string>
    <string name="delete_cart_item_failed">Xoá khỏi giỏ hàng thất bại</string>
    <string name="delete_cart_dialog_title">Xoá khỏi giỏ hàng</string>
    <string name="delete_cart_dialog_message">Bạn có muốn xoá mặt hàng này khỏi giỏ không?</string>

    <!--    order detail-->
    <string name="code_order">Mã vận đơn</string>
    <string name="deliver_by">Vận chuyển bởi %s</string>
    <string name="order_successfully_and_wait_verify">Đặt hàng thành công, đang chờ người bán xác nhận</string>
    <string name="seller_verified_and_packaging">Người bán đã xác nhận, đang chuẩn bị hàng</string>
    <string name="seller_sent_and_shipping">Đã giao cho đơn vị vận chuyển, bắt đầu vận chuyển</string>
    <string name="delivering">Đang giao hàng</string>
    <string name="deliver_successfully">Giao hàng thành công</string>
    <string name="follow_your_order">Theo dõi đơn của bạn</string>
    <string name="shipper_info">Thông tin người giao hàng</string>

    <!--    fragment account-->
    <string name="liked">Đã thích</string>
    <string name="history">Lịch sử</string>
    <string name="saw_recently">Đã xem gần đây</string>
    <string name="voucher_store">Kho voucher</string>
    <string name="setting_account">Thiết lập tài khoản</string>
    <string name="yes">Có</string>
    <string name="cancel">Huỷ</string>
    <string name="want_to_sign_out">Bạn có muốn đăng xuất không?</string>

    <!--    add address-->
    <string name="add_address">Thêm địa chỉ</string>
    <string name="province_city">Tỉnh/thành phố</string>
    <string name="distric">Quận/huyện</string>
    <string name="street">Đường/xã</string>
    <string name="home_address">Địa chỉ nhà</string>
    <string name="save_address">Lưu địa chỉ</string>
    <string name="address">Địa chỉ</string>
    <string name="title">Tiêu đề</string>

<!--    detail product fragment-->
    <string name="sold">Đã bán %s</string>
    <string name="description">Mô tả</string>
    <string name="specification">Đặc điểm</string>
    <string name="other">Khác</string>

</resources>