<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<!--    android:background="#EBEBEB"-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        style="@style/customTabLayout"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specification"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerProductDesc"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:background="@color/colorLightBG"
        android:layout_height="400dp"/>

</LinearLayout>