<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.AddAddressFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/add_address"
        android:theme="@style/ToolBarPrimaryIconTheme"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/viewUnderToolBar"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/colorGrayBG"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/img_add_address"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_add_address"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/viewUnderToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/img_add_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="4dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvContentAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/distric"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtContentAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/distric"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tvContentAddress"
            app:layout_constraintBottom_toBottomOf="@id/tvContentAddress"
            app:layout_constraintStart_toEndOf="@id/tvContentAddress"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_square_button_primary"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save_address"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>