<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.system.LoginFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_cut"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:cardCornerRadius="10dp"
            android:background="@color/white"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_black_border_static"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorTextGray"
                    android:textCursorDrawable="@drawable/bg_black_cursor"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="35dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorDarkBG"/>

                <EditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/bg_black_cursor"
                    android:textColorHint="@color/colorTextGray"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="16dp"/>

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:indeterminateTint="@color/black"
                        android:visibility="gone"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_corner_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/forgorPswBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/forgot_password"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/no_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:gravity="center"
            android:layout_marginTop="190dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>