<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.AccountFragment">

    <LinearLayout
        android:id="@+id/lnAccountInfo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorDarkBG"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_default_avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/lnAccountInfo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="98dp"
        android:layout_height="29dp"
        android:layout_marginStart="12dp"
        android:text="User name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/civAvatar"
        app:layout_constraintTop_toTopOf="@id/civAvatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="user@gmail.com"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="0dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bg_radius_solid_grey"
        app:layout_constraintBottom_toBottomOf="@id/civAvatar"
        app:layout_constraintStart_toEndOf="@id/civAvatar"/>

    <ImageView
        android:id="@+id/imgSetting"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_setting"
        app:tint="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnFavorite"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_item_account_fragment"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:elevation="4dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@id/lnHistory"
        app:layout_constraintTop_toBottomOf="@id/lnAccountInfo"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_favorite"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liked"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnHistory"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_item_account_fragment"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:elevation="4dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@id/lnFavorite"
        app:layout_constraintTop_toBottomOf="@id/lnAccountInfo"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_history_watch"
            android:layout_marginBottom="8dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saw_recently"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_item_account_fragment"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:elevation="4dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@id/ln4"
        app:layout_constraintTop_toBottomOf="@id/lnFavorite"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_voucher"
            android:layout_marginBottom="8dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voucher_store"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_item_account_fragment"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:elevation="4dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@id/ln3"
        app:layout_constraintTop_toBottomOf="@id/lnHistory"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_account_filled"
            android:layout_marginBottom="8dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_account"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:elevation="0dp"
        android:backgroundTint="@color/colorDarkBG"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>